--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     #任务名称
     name: checkout
     # 指定任务的运行环境
-    runs-on: ubantu-latest
+    runs-on: ubuntu-latest
 
     #执行步骤
     steps:
