--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,8 @@ jobs:
     - name: checkout code to target machine
       uses: actions/checkout@v3
       with: 
-         repository: CodesJoker/git2.git
+         repository: CodesJoker/git2
+         ref: main
     - run: |
         git config user.name CodesJoker
         git config user.email 2983937743@qq.com
