--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,10 @@ jobs:
     - run: |
         git config user.name CodesJoker
         git config user.email 2983937743@qq.com
+        git remote add origin git@github.com:CodesJoker/git2.git
         git add .
         git commit -m "test"
-        git push
+        git push -u origin main
   
   
   
