--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,13 @@ jobs:
     - name: checkout code to target machine
       uses: actions/checkout@v3
       with: 
-         repository: CodesJoker/git2
+         repository: CodesJoker/git1
          ref: main
     - run: |
         git config user.name CodesJoker
         git config user.email 2983937743@qq.com
+        git checkout -b prd
+        git remote add git@github.com:CodesJoker/git2.git
         git add .
         git commit -m "test"
         git push -u origin main
