--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
       with: 
          ref: main
     - run: |
+        git config user.name CodesJoker
+        git config user.email 2983937743@qq.com
         ls
         git checkout -b prd
         git fetch --all
