--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,7 @@ jobs:
     - run: |
         git config user.name CodesJoker
         git config user.email 2983937743@qq.com
-        ls
-        git checkout -b prd
-        git fetch --all
-        git reset --hard origin/main
-        ls
-        git status
-        git remote add master git@github.com:CodesJoker/git2.git
+        git remote set-url origin git@github.com:CodesJoker/git2.git
         git add .
         git commit -m "test"
         git push -u master main
