--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,8 @@ jobs:
     - run: |
         git config user.name CodesJoker
         git config user.email 2983937743@qq.com
-        git remote set-url origin git@github.com:CodesJoker/git2.git
-        git add .
-        git commit -m "test"
-        git push -u master main
+        git remote add master git@github.com:CodesJoker/git2.git
+        git push --force master
   
   
   
