--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,12 @@ on:
 # 按顺序运行作业
 jobs:
   #任务ID
-  checkout:
-    #任务名称
-    name: checkout
-    # 指定任务的运行环境
-    runs-on: ubuntu-latest
-    #执行步骤
-    steps:
-    - name: checkout code to target machine
-      uses: actions/checkout@v3
-      with: 
-         ref: main
-    - run: |
-        git config user.name CodesJoker
-        git config user.email 2983937743@qq.com
-        git remote add master git@github.com:CodesJoker/git2.git
-        git push --force master
+  deploy:
+    runs-on: ubuntu-latest # 使用ubuntu系统镜像运行自动化脚本
+    steps: # 自动化步骤
+      #任务名称
+      - name: mirror push
+          - uses: actions/checkout@v3 # 第一步，下载代码仓库
+          - name: Deploy to Server    # 第二步，推文件到服务器
+              env: 
+                GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
