--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest # 使用ubuntu系统镜像运行自动化脚本
     steps: # 自动化步骤
-      #任务名称
+      #任务名称1
       - name: auto push
         uses: Yikun/hub-mirror-action@master # 第一步，下载代码仓库
         with:
