--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,5 @@ jobs:
         run: |
           git config user.name CodesJoker
           git config user.email 2983937743@qq.com
-          git remote add main git@github.com:CodesJoker/git2.git
-          git add .
-          git commit -m 'auto push'
+          git remote set-url --push origin git@github.com:CodesJoker/git2.git
           git push -f
